--- a/pages/html/list.html
+++ b/pages/html/list.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="icon" href="../../favicon.ico" type="image/png">
 
-	<title>JewmberAnimate</title>
+	<title>GoAnimate Wrapper Home</title>
 	<meta name="description" content="JewmberAnimate is a reskinned LVM clone.">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="JewmberAnimate" />
@@ -17,7 +17,7 @@
 <body>
 
 <header>
-	<h1 style="margin:0"><img id="logo" src="../img/list_logo.png" alt="JewmberAnimate"/></h1>
+	<h1 style="margin:0"><img id="logo" src="../img/logo-2.png" alt="GoAnimate Wrapper"/></h1>
 	<nav id="headbuttons">
 		
 		<div class="dropdown_contain button_small">
@@ -80,7 +80,7 @@
 
 <footer>
 	<nav id="foot-left">
-		<a href="https://discord.gg/Tj56gpb">JewmberAnimate Discord</a>
+		<a href="https://discord.io/goanimate4schools">GoAnimate4schools Remastered Discord</a>
 	</nav>
 </footer>
 
