--- a/pages/html/list.html
+++ b/pages/html/list.html
@@ -5,10 +5,10 @@
 	<link rel="icon" href="../../favicon.ico" type="image/png">
 
 	<title>GoAnimate Wrapper Home</title>
-	<meta name="description" content="JewmberAnimate is a reskinned LVM clone.">
+	<meta name="description" content="GoAnimate Wrapper is the old goanimate that shut down.">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="JewmberAnimate" />
-	<meta property="og:description" content="JewmberAnimate is a reskinned LVM clone." />
+	<meta property="og:description" content="GoAnimate Wrapper is the old goanimate that shut down." />
 	<meta name="theme-color" content="#FF0080">
 	<link rel="stylesheet" type="text/css" href="../css/modern-normalize.css">
 	<link rel="stylesheet" type="text/css" href="../css/global.css">
