--- a/pages/html/oldlist.html
+++ b/pages/html/oldlist.html
@@ -11,7 +11,7 @@
 
 <header>
 	<div>
-		<h1 style="margin:0"><img id="logo" src="../img/list_logo.png" alt="Wrapper: Offline"/></h1>
+		<h1 style="margin:0"><img id="logo" src="../img/logo-2.png" alt="Wrapper: Offline"/></h1>
 		<div id="headbuttons">
 			<a class="button_small" onclick="document.getElementById('file').click()">UPLOAD A MOVIE</a>
 			<div id="char_dropdown" class="button_small">
@@ -56,7 +56,7 @@
 	</tfoot>
 </table>
 <footer>
-	<a id="discordlink" href="https://discord.gg/yhGAetN">Discord Server</a>
+	<a id="discordlink" href="https://discord.gg/goanimate">Discord Server</a>
 </footer>
 
 <form enctype='multipart/form-data' action='/upload_movie' method='post'>
